# importstring_demo

./: README.md  pyproject.toml
src/importstring_demo/: main.py  type_adapter.py
